# MyPM

./: .gitignore  pyproject.toml
backend/: pyproject.toml
backend/src/mypm/: app.py  main.py
backend/src/mypm/application/tasks/: __init__.py  dto.py  services.py
backend/src/mypm/core/: config.py
backend/src/mypm/domain/tasks/: __init__.py  entities.py  repositories.py
backend/src/mypm/infrastructure/tasks/: __init__.py
backend/src/mypm/infrastructure/tasks/memory/: repositories.py
backend/src/mypm/presentation/: __init__.py
backend/src/mypm/presentation/api/: __init__.py
backend/src/mypm/presentation/api/dependencies/: __init__.py
backend/src/mypm/presentation/api/routes/: __init__.py  health.py  retrospective.py  tasks.py
backend/src/mypm/presentation/api/schemas/: retrospective.py  task.py
frontend/: package-lock.json  package.json
frontend/src/: index.css
frontend/src/components/: LayoutShell.css  LayoutShell.tsx
frontend/src/components/retrospective/: RetrospectivePanel.css  RetrospectivePanel.tsx
frontend/src/components/task/: TaskBoard.css  TaskBoard.tsx
frontend/src/pages/: DashboardPage.css  DashboardPage.tsx
frontend/src/routes/: index.tsx
frontend/src/routes/layout/: AppLayout.tsx
frontend/src/services/: client.ts  retrospectives.ts  tasks.ts
frontend/src/types/: retrospective.ts  task.ts
src/mypm/: main.py
